修改：     databasefile/stock.db 	修改：     datamanager/config/stock.ini 	修改：     datamanager/smarkethistorydata.py 	修改：     datamanager/stockhistorydata.py

--- a/datamanager/config/stock.ini
+++ b/datamanager/config/stock.ini
@@ -1,5 +1,9 @@
 [stockid]
 shanghai = 600000
-small = 3168
-smarket = 300159
+small = 26
+smarket = 301000
+
+[history]
+stockid = 1
+smarketid = 1
 
