修改：     Interface/mainwindow.py 	修改：     databasefile/stock.db 	修改：     datamanager/config/stock.ini 	修改：     datamanager/smarkethistorydata.py 	修改：     datamanager/stockhistorydata.py

--- a/datamanager/config/stock.ini
+++ b/datamanager/config/stock.ini
@@ -4,6 +4,10 @@ small = 26
 smarket = 301000
 
 [history]
-stockid = 1
-smarketid = 1
+stockid = 189
+smarketid = 106
+
+[historydate]
+startdate = 20190510
+enddate = 20200515
 
